<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pandacelerometro</string>
    <string name="action_settings">Settings</string>
    <string name="Move">Shake to get a toast and to switch color</string>
    <string name="menu_settings">Settings</string>
    <string name="Ejex">Eje X: </string>
    <string name="Ejey">Eje Y: </string>
    <string name="Ejez">Eje Z: </string>
    <string name="MovHorizontal">Mov. Hor: </string>
    <string name="MovVertical">Mov. Ver: </string>
    <string name="MovProfundidad">Mov. Pro: </string>
    <string name="titulo">Valores acelerómetro</string>
    <string name="sensorNameLabel">Sensor: </string>
    <string name="sensorVersionLabel">Version: </string>
    <string name="sensorPowerLabel">Potencia: </string>    
    <string name="contador">0</string>
    <string name="descriptionPambil">ImageView</string>
    <string name="feedbackString">¡Bienvenido!\n¡Pulsa en una flecha para empezar!</string>
    
    <string name= "contextMenu_volver">Volver</string>
    <string name= "contextMenu_creditos">Créditos</string>
    <string name= "contextMenu_juegos">Juegos de Pambú! Dev.</string>
    <string name= "contextMenu_codigoYus">Source Code (Yus Bravo)</string>
    <string name= "contextMenu_codigoPedro">Source Code (Pedro Bosch)</string>
    <string name= "contextMenu_salir">Salir</string>
    
    <string name="ws_text">¡Bienvenido! Elije un modo de juego</string>
    <string name="ws_test">Modo Test</string>
    <string name="ws_onePlayer">Modo 1 jugador</string>

    <string name="opm_explicacion">Observa atentamente los movimientos que te dice Pambil con sus ojos, y realízalos cuando empiece la cuenta atrás.\n ¡Pulsa "Play" para empezar!
    </string>
    <string name="opm_name">Pambil Dice</string>
    <string name="opm_descNum">Cuenta atras</string>
    <string name="opm_turnoText">Turno de Pambil</string>
</resources>
